# haskell-reed-solomon

./: Config.hs  DataProcessing.hs  Decoder.hs  Encoder.hs  ErrorInjection.hs  Galois.hs  Main.hs  README.md  ReedSolomon.hs  Util.hs  reedSolomon.cabal
src/: Config.hs  Decoder.hs  Encoder.hs  ErrorInjection.hs  Main.hs  Types.hs
util/: DataProcessing.hs  Galois.hs  Util.hs
