name:                reedSolomon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://gitlab.com/Ace_BCB/haskell_reed_solomon
license:             BSD3
license-file:        LICENSE
author:              BenjaminCB
maintainer:          benjamincb@hotmail.dk
copyright:           2021 BenjaminCB
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/input.txt,
                     data/output.txt

executable reedSolomon
    main-is:                Main.hs
    hs-source-dirs:         src
    build-depends:          base >= 4.7 && < 5,
                            reedSolomon,
                            random
    other-modules:          ReedSolomon,
                            Config,
                            Types,
                            Encoder,
                            Decoder,
                            ErrorInjection,
                            Galois,
                            DataProcessing,
                            Util
    default-language:       Haskell2010


library
    hs-source-dirs:     src,
                        util
    exposed-modules:    ReedSolomon
    other-modules:      Config,
                        Types,
                        Encoder,
                        Decoder,
                        ErrorInjection,
                        Galois,
                        DataProcessing,
                        Util
    build-depends:      base >= 4.7 && < 5,
                        random
    default-language:   Haskell2010
